--- a/src/ThemeColors.module.scss
+++ b/src/ThemeColors.module.scss
@@ -1,5 +1,5 @@
 $primary-color: #01d371;
-$bg-gradient: linear-gradient(111.04deg, #E2E2E2 0.39%, rgba(255, 255, 255, 0) 86.46%);
+$bg-gradient: linear-gradient(145deg, rgba(155, 155, 155, 0.2) 0.39%, rgba(255, 255, 255, 0.2) 86.46%);
 $bg-color1: #FFFFFF;
 $bg-color2: #F5F5F5;
 $bg-color3: #F8FBFF;
