--- a/src/App.scss
+++ b/src/App.scss
@@ -96,7 +96,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  min-height: 156px;
+  height: 160px;
   background-color: $bg-color1;
   padding: 0 85px;
 
@@ -111,7 +111,7 @@ nav {
       margin: 0 3vw;
 
       a {
-        margin: 0 3vw;
+        margin: 0 1vw;
         outline: none;
         border: none;
         cursor: pointer;
@@ -247,28 +247,6 @@ nav {
   }
 }
 
-//@keyframes transformYTransitionIn {
-//  from{
-//    transform: translateY(-20px);
-//  }
-//  to{
-//    transform: translateY(0px);
-//  }
-//}
-//
-//@keyframes accordionOpenerTransitionIn  {
-//  from{
-//    opacity: 0;
-//  }
-//  to{
-//    opacity: 1;
-//  }
-//}
-
-.transition, ul li i:before, ul li i:after, p {
-  transition: all 0.25s ease-in-out;
-}
-
 .advantages-section-container {
   background-color: $bg-color3;
   width: 50vw;
@@ -290,7 +268,6 @@ nav {
     width: 75%;
 
     .advantage-item {
-      height: 100%;
       border-bottom: 1px solid #E7EBF0;
       margin-bottom: 18px;
       padding-bottom: 16px;
@@ -365,32 +342,45 @@ nav {
 }
 
 .home-section-container {
-  background: $bg-gradient;
-  height: 100%;
+  height: 1107px;
+
 
   .home-banner-container {
+    background: $bg-gradient;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-flow: column;
-    padding-bottom: 100px;
+    height: 947px;
+
+    hr {
+      margin-top: 0;
+    }
 
     .home-banner-row-berry {
       display: flex;
       align-items: center;
+      margin: -20px 0;
 
       .home-banner-berry {
         display: flex;
         align-items: center;
         width: 530px;
-        height: 300px;
+        height: 370px;
         background-image: url("./assets/berry.png");
         background-position: top;
         background-repeat: no-repeat;
-        background-size: 500px;
-        margin-bottom: -50px;
+        background-size: 580px;
         margin-left: -30px;
         margin-right: -30px;
+        margin-bottom: -80px;
+      }
+
+      .home-banner-item {
+
+        p {
+          line-height: 19px;
+        }
       }
     }
 
@@ -401,20 +391,24 @@ nav {
       .home-banner-item {
         margin-left: 50px;
         margin-right: 50px;
+
+        p {
+          line-height: 19px;
+        }
       }
     }
 
     .home-banner-item {
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: space-around;
       flex-flow: column;
       height: 175px;
       width: 150px;
       text-align: center;
 
       img {
-        height: 70px;
+        height: 80px;
       }
     }
   }
