--- a/src/ThemeColors.module.scss
+++ b/src/ThemeColors.module.scss
@@ -1,5 +1,6 @@
 $primary-color: #01d371;
 $bg-gradient: linear-gradient(145deg, rgba(155, 155, 155, 0.2) 0.39%, rgba(255, 255, 255, 0.2) 86.46%);
+$border-gradient: linear-gradient(318.43deg, rgba(0, 195, 104, 0.4) 0%, rgba(0, 195, 104, 0) 99.05%);
 $bg-color1: #FFFFFF;
 $bg-color2: #F5F5F5;
 $bg-color3: #F8FBFF;
@@ -8,7 +9,8 @@ $text-color-black: #2E3A59;
 
 :export {
   primaryColor: $primary-color;
-  bg: $bg-gradient;
+  bgGradient: $bg-gradient;
+  borderGradient: $border-gradient;
   bgColor1: $bg-color1;
   bgColor2: $bg-color2;
   bgColor3: $bg-color3;
